style.css
body{
    margin 0px;
    padding : 0px;
    font-family: font-family: 'Roboto', sans-serif;
}

.intro-section{
    display : flex;
    width : 100%;
    padding-left: 7%;
    background-image: url(images/Frame\ 58.jpg);
    color:hsla(0, 0%, 0%, 0.534);
}

h1{
    font-size: 40px;
}

.orange-color{
    color: orange;
    font-weight: bold;
}

.intro-content-div{
    width: 50%;
    margin-top: 7%;
    margin-left: 10%;
    text-align: justify;
}

.intro-content-div p{
    margin-bottom: 10%;
}

.intro-photo-div{
    width : 50%;
    margin-top: 1%;
    margin-right: 15%;
}

.intro-photo-div img{
    width: 80%;
}

.button-decor{
    text-decoration: none;
    background-image: linear-gradient(to left, rgb(255,69,0),  rgba(255, 69, 0, 0.39));
    padding: 16px 24px;
    color: white;
    border-radius: 40px;
    font-weight: bold;
}

.mid-section{
    display : flex;
    width : 100%;
    margin-top: 5%;
    margin-bottom: 5%;
    padding-left: 7%;
    color:hsla(0, 0%, 0%, 0.534);
    background-image: url(images/Frame\ 57.jpg);
}

.mid-photo-div{
    width : 50%;
    margin-top: 3%;
    margin-left: 15%;
}

.mid-photo-div img{
    width: 50%;
}

.mid-content-div{
    width: 50%;
    margin-top: 5%;
    margin-right: 17%;
    text-align: justify;
}

.mid-content-div p{
    margin-bottom: 20%;
    padding-right: 25%;
}

.recipies-heading{
    width : 100%;
    text-align : center;
    color:hsla(0, 0%, 0%, 0.534);
    margin-bottom: 3%;
}

.recipies-section{
    display : flex;
    width : 80%;
    margin-left: 11%;
}

.reccipies-section-div{
    width : 33%;
    text-align: justify;
    padding: 1%;
    border: 5x;
    border-style: solid;
    border-color: white;
    border-radius: 40px;
    margin-right: 5%;
    box-shadow: 0 0 20px lightgray;
}

.reccipies-section-div img{
    width: 100%;
}

